--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.69.6",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
