--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-pdf": "^9.0.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.2.0",
