--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "axareactpwa.ru",
-  "version": "1.0.2",
+  "version": "1.1.2",
   "homepage": "/",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/styles": "^4.11.5",
@@ -11,6 +13,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel": "^6.23.0",
     "feather-icons": "^4.29.1",
     "jquery": "^3.7.1",
     "material-ui": "^0.15.0",
@@ -24,6 +27,8 @@
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.69.6",
+    "util": "^0.12.5",
+    "uuid": "^10.0.0",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
