--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,7 @@ server {
     location ~* \.(?:css|js|jpe?g|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webp|webm|htc|json|webmanifest)$ {
         # 'js', 'css', 'изображения' и 'manifest'
         
-        expires 1y; # Кэширование на 1 год (для файлов с хешами в имени)
+        expires 1s; # Кэширование на 1 год (для файлов с хешами в имени)
         access_log off;
         
         # Установка заголовков для управления кэшем
