--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
           script: |
             cd /var/www/my-pwa # Путь к твоей папке на сервере
             git pull origin main
-            sudo docker-compose up --build -d
+            docker-compose up --build -d
