--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Используем последнюю версию Ubuntu для выполнения задачи
     steps:
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v1.0.3
