--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,5 @@ services:
       - '443:443' # Публичный HTTPS
       - '81:81'   # Админка менеджера сертификатов
     volumes:
-      - ./data:/data
+      - ./data:/data # Хранение данных менеджера сертификатов
       - ./letsencrypt:/etc/letsencrypt # Хранение сертификатов Let's Encrypt
