--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd /var/www/my-pwa
-            git pull origin main
-            # Используем новую команду docker compose (она лучше понимает compose.yaml)
-            sudo docker compose down
-            sudo docker compose up --build -d
+            git pull origin main # 1. Останавливаем контейнеры и удаляем их, чтобы освободить порты
+            sudo docker-compose down # 2. Собираем и запускаем заново
+            sudo docker-compose up --build -d # 3. Чистим мусор (старые образы), чтобы диск не переполнился
             sudo docker image prune -f
